--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="David's Website">
+    <meta name="keywords" content="David, SHSU, COBA, MIS">
     <title>David's Website</title>
 </head>
 <body>
-    
+    <header>   
+        <img src="fatcat.jpg" alt="fat cat from google">
+    </header>
 </body>
 </html>
