--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>   
-        <img src="fatcat.jpg" alt="fat cat from google">
+        <img src="fatcat.jpg" alt="fat cat from google" height="100">
     </header>
 </body>
 </html>
