--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
     <header>   
         <img src="images/fatcat.jpg" alt="fat cat from google" height="100">
     </header>
+    <main>
+        <h1>Welcome to my website!</h1>
+        <h2>https://davidfidow.github.io</h2>
+    </main>
 </body>
 </html>
