--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
         <h1>Welcome to my website!</h1>
         <h2>https://davidfidow.github.io</h2>
         <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque ipsa, omnis reiciendis delectus praesentium nisi beatae aspernatur unde autem amet pariatur corrupti quam iusto voluptatibus rem deserunt nemo cum facere quidem officiis obcaecati! Eum at repellat sed. At consequatur natus, voluptatum atque ab iure blanditiis tempora! Iste doloremque sapiente sunt quos, autem veniam commodi consequuntur enim accusantium culpa quidem voluptas, impedit fugiat harum dolor, provident mollitia aut nihil et. Aliquid nesciunt temporibus, ipsum ex eaque recusandae atque nulla voluptates impedit ut beatae nisi maxime eum at et sit, facere doloremque quidem. Ut, laborum! Unde eius dolore rerum quis nulla velit.</h3>
+        <nav>
+            <ul>
+                <li>Education</li>
+                <li>Work Experience</li>
+                <li>Knowledge and Skills</li>
+                <li>Certifications</li>
+                <li>Class Projects</li>
+            </ul>
+        </nav>
     </main>
 </body>
 </html>
