--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li><a href="#">Class Projects</a></li>
             </ul>
         </nav>
+        <p>Click here to download <a href="files/wip resume.docx">my wip outdated resume</a></p>
     </main>
 </body>
 </html>
