--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
             </ul>
         </nav>
         <p>Click here to download <a href="files/wip resume.docx">my wip outdated resume</a></p>
+        <p>Click here to go to <a href="https://www.linkedin.com/" target="_blank">my LinkedIn</a></p>
+        <p>Click here to go to <a href="mailto:davidnorthwest@outlook.com"><em>davidnorthwest@outlook.com</em></a></p>
+        <br>
+        <hr>
     </main>
+    <footer>
+        <p>&copy Copyright 2026</p>
+    </footer>
 </body>
 </html>
