--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </nav>
         <p>Click here to download <a href="files/wip resume.docx">my wip outdated resume</a></p>
         <p>Click here to go to <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a></p>
-        <p>Click here to mail me at <a href="mailto:davidnorthwest@outlook.com"><em>davidnorthwest@outlook.com</em></a></p>
+        <p>Contact me at <a href="mailto:davidnorthwest@outlook.com"><em>davidnorthwest@outlook.com</em></a></p>
         <br>
         <hr>
     </main>
