--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <hr>
     </main>
     <footer>
-        <p>&copy Copyright 2026</p>
+        <p>&copy&amp; Copyright 2026</p>
     </footer>
 </body>
 </html>
