--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><a href="#">Class Projects</a></li>
             </ul>
         </nav>
-        <p>Click here to download <a href="files/wip resume.docx">my wip outdated resume</a></p>
+        <p>Click here to download <a href="files/wip-resume.docx">my wip outdated resume</a></p>
         <p>Click here to go to <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a></p>
         <p>Contact me at <a href="mailto:davidnorthwest@outlook.com"><em>davidnorthwest@outlook.com</em></a></p>
         <br>
