--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="David's Website">
     <meta name="keywords" content="David, SHSU, COBA, MIS">
     <title>David's Website</title>
-    <link rel="stylesheet" href="styles/main.css"
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
     <header>   
